--- a/day3.html
+++ b/day3.html
@@ -146,5 +146,11 @@
                 <p>&#169;  &#60;</p>
             </footer>
 
+            <!-- #server---------------------------------------------DNS MAPPING  DOMAIN NAME
+                -code
+                -24/7 run 
+                -network 
+                -http server req and rep 
+                -has public ip -192.150.100.150 -->
 
 </body>
